New article: YouTube without YouTube Shorts

--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -9,6 +9,8 @@ I use <a href="https://omnivore.app">Omnivore</a> to read, tag, and share URLs. 
 </p>
 <p>
 <h2>Life</h2><ul>
+<li>“<a href="https://aworkinglibrary.com/writing/knowledge-workers">There aren't knowledge workers, only workers</a>” by <strong>Mandy Brown</strong></li>
+<li>“<a href="https://nonzero.substack.com/p/ode-to-a-world-saving-idea-f4b">Attribution error: explaining other's behavior with disposition or situation</a>” by <strong>Robert Wright</strong></li>
 <li>“<a href="https://www.marginalia.nu/log/a_108_feynman_revisited/">Feynman's Garden</a>” by <strong>marginalia.nu</strong></li>
 <li>“<a href="https://nesslabs.com/ikigai">What We Got Wrong and How to Find Meaning in Life</a>” by <strong>Anne-Laure Le Cunff</strong></li>
 <li>“<a href="https://ourworldindata.org/much-better-awful-can-be-better">The world is awful, much better, and can be much better</a>” by <strong>Max Roser</strong></li>
@@ -29,6 +31,7 @@ I use <a href="https://omnivore.app">Omnivore</a> to read, tag, and share URLs. 
 <li>“<a href="https://brettscott.substack.com/p/tech-doesnt-make-our-lives-easier">Tech doesn’t make our lives easier. It makes them faster</a>” by <strong>Brett Scott</strong></li>
 </ul>
 <h2>Retro Gaming</h2><ul>
+<li>“<a href="https://youtu.be/nviIKTywuYU?si=mgFOhNBRMCTAIwOU">A video about Melee</a>” by <strong>AsumSaus</strong></li>
 <li>“<a href="https://youtube.com/watch?si=BDytOgheHFncVBK9&v=tfS9SYPT-jw">Super Paper Mario's design</a>” by <strong>Kirbyster</strong></li>
 <li>“<a href="https://orangegb.com/orangefm/">ORANGE FM, Game Boy cartridge for FM Radio</a>” by <strong>Evan Barger </strong></li>
 <li>“<a href="http://www.blarg.ca/2021/02/15/using-a-gamecube-ascii-keyboard-controller-with-libogc">Gamecube ASCII keyboard controller and libogc</a>” by <strong>Gered King</strong></li>
@@ -65,6 +68,7 @@ I use <a href="https://omnivore.app">Omnivore</a> to read, tag, and share URLs. 
 <li>“<a href="https://www.youtube.com/watch?v=EkcISHZvWHE">Ashida Portable GameCube Assembly</a>” by <strong>GingerOfVODs</strong></li>
 </ul>
 <h2>Security</h2><ul>
+<li>“<a href="https://me.micahrl.com/blog/concerns-about-passkeys/">Concerns about Passkeys and user agency</a>” by <strong>Micah R Ledbetter</strong></li>
 <li>“<a href="https://denysdovhan.com/home-assistant-config/config/war/">Home Assistant for Wartime Safety</a>” by <strong>Denys Dovhan</strong></li>
 <li>“<a href="https://berthub.eu/articles/posts/cyber-security-pre-war-reality-check/">Cyber Security: A Pre-War Reality Check</a>” by <strong>Bert Hubert</strong></li>
 <li>“<a href="https://www.hezmatt.org/~mpalmer/blog/2024/04/09/how-i-tripped-over-the-debian-weak-keys-vuln.html">Tripping over the Debian Weak Keys vulnerability</a>” by <strong>Matt Palmer</strong></li>
