--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -9,6 +9,8 @@ I use <a href="https://omnivore.app">Omnivore</a> to read, tag, and share URLs. 
 </p>
 <p>
 <h2>Life</h2><ul>
+<li>“<a href="https://www.theverge.com/2024/8/22/24225972/ai-photo-era-what-is-reality-google-pixel-9">Photos no longer capture reality</a>”</li>
+<li>“<a href="https://yossarian.net/brothercon/">Brothercon 🍕</a>” by <strong>William Woodruff</strong></li>
 <li>“<a href="https://aworkinglibrary.com/writing/knowledge-workers">There aren't knowledge workers, only workers</a>” by <strong>Mandy Brown</strong></li>
 <li>“<a href="https://nonzero.substack.com/p/ode-to-a-world-saving-idea-f4b">Attribution error: explaining other's behavior with disposition or situation</a>” by <strong>Robert Wright</strong></li>
 <li>“<a href="https://www.marginalia.nu/log/a_108_feynman_revisited/">Feynman's Garden</a>” by <strong>marginalia.nu</strong></li>
@@ -31,6 +33,7 @@ I use <a href="https://omnivore.app">Omnivore</a> to read, tag, and share URLs. 
 <li>“<a href="https://brettscott.substack.com/p/tech-doesnt-make-our-lives-easier">Tech doesn’t make our lives easier. It makes them faster</a>” by <strong>Brett Scott</strong></li>
 </ul>
 <h2>Retro Gaming</h2><ul>
+<li>“<a href="https://fabiensanglard.net/snes_video/index.html">Super Nintendo Video System</a>” by <strong>Fabien Sanglard</strong></li>
 <li>“<a href="https://youtu.be/nviIKTywuYU?si=mgFOhNBRMCTAIwOU">A video about Melee</a>” by <strong>AsumSaus</strong></li>
 <li>“<a href="https://youtube.com/watch?si=BDytOgheHFncVBK9&v=tfS9SYPT-jw">Super Paper Mario's design</a>” by <strong>Kirbyster</strong></li>
 <li>“<a href="https://orangegb.com/orangefm/">ORANGE FM, Game Boy cartridge for FM Radio</a>” by <strong>Evan Barger </strong></li>
@@ -68,6 +71,9 @@ I use <a href="https://omnivore.app">Omnivore</a> to read, tag, and share URLs. 
 <li>“<a href="https://www.youtube.com/watch?v=EkcISHZvWHE">Ashida Portable GameCube Assembly</a>” by <strong>GingerOfVODs</strong></li>
 </ul>
 <h2>Security</h2><ul>
+<li>“<a href="https://blog.isosceles.com/openssh-backdoors/">Comparing the two OpenSSH backdoors</a>” by <strong>Ben Hawkes</strong></li>
+<li>“<a href="https://rya.nc/vpp-hack.html">Hacking a Virtual Power Plant</a>” by <strong>Ryan Castellucci</strong></li>
+<li>“<a href="https://www.anarsec.guide/posts/tamper/">Make Your Electronics Tamper-Evident</a>” by <strong>AnarSec</strong></li>
 <li>“<a href="https://harihareswara.net/posts/2024/a-story-about-jessica-by-swiftonsecurity/">A Story About Jessica</a>” by <strong>SwiftOnSecurity</strong></li>
 <li>“<a href="https://me.micahrl.com/blog/concerns-about-passkeys/">Concerns about Passkeys and user agency</a>” by <strong>Micah R Ledbetter</strong></li>
 <li>“<a href="https://denysdovhan.com/home-assistant-config/config/war/">Home Assistant for Wartime Safety</a>” by <strong>Denys Dovhan</strong></li>
@@ -81,6 +87,8 @@ I use <a href="https://omnivore.app">Omnivore</a> to read, tag, and share URLs. 
 <li>“<a href="https://blog.trailofbits.com/2023/05/23/trusted-publishing-a-new-benchmark-for-packaging-security">Trusted publishing: a new benchmark for packaging security</a>” by <strong>William Woodruff</strong></li>
 </ul>
 <h2>Software / OSS</h2><ul>
+<li>“<a href="https://infrequently.org/series/reckoning/">Reckoning for web frontend</a>” by <strong>Alex Russell</strong></li>
+<li>“<a href="https://infrequently.org/2024/01/performance-inequality-gap-2024/">Frontend is haunted by 2013's Great Branch Mispredict</a>” by <strong>Alex Russell</strong></li>
 <li>“<a href="https://holtwick.de/en/blog/localfirst-resilient-sync">Resilient Sync for Local First</a>” by <strong>Dirk Holtwick</strong></li>
 <li>“<a href="https://tonsky.me/blog/crdt-filesync/">Local, first, forever</a>” by <strong>Nikita Prokopov</strong></li>
 <li>“<a href="https://www.datagubbe.se/stupidslow/">Stupid Slow</a>” by <strong>Carl Svensson</strong></li>
