--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,6 +16,7 @@
         </div>
         <div class="col-2 col-4-sm" style="text-align: right;">
             <div>Location:</div>
+            <div>Timezone:</div>
             <div>Pronouns:</div>
             <div>Email:</div>
             <div>Email:</div>
@@ -27,7 +28,8 @@
             <div>Twitter:</div>
         </div>
         <div class="col-4 col-8-sm">
-            <div>Minneapolis, MN</div>
+            <div><a href="https://www.openstreetmap.org/relation/136712">Minneapolis, MN</a></div>
+            <div><a href="https://time.is/Minneapolis">US Central</a></div>
             <div>he/him</div>
             <div><a href="mailto:sethmichaellarson@gmail.com" target="_blank" rel="noopener noreferrer">sethmichaellarson@gmail.com</a></div>
             <div><a href="mailto:seth@python.org" target="_blank" rel="noopener noreferrer">seth@python.org</a></div>
