--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -9,7 +9,9 @@ I use <a href="https://omnivore.app">Omnivore</a> to read, tag, and share URLs. 
 </p>
 <p>
 <h2>Life</h2><ul>
-<li>“<a href="https://www.theverge.com/2024/8/22/24225972/ai-photo-era-what-is-reality-google-pixel-9">Photos no longer capture reality</a>”</li>
+<li>“<a href="https://restofworld.org/2024/electric-vehicle-conversions-uruguay/">Turning gas cars electric in Latin America</a>”</li>
+<li>“<a href="https://www.joelonsoftware.com/2002/06/12/strategy-letter-v/">Commodotize your products' complement</a>” by <strong>Joel Spolsky</strong></li>
+<li>“<a href="https://climate.benjames.io/solar-off-grid/">Solar will be too cheap to connect to the power grid</a>” by <strong>Ben James</strong></li>
 <li>“<a href="https://yossarian.net/brothercon/">Brothercon 🍕</a>” by <strong>William Woodruff</strong></li>
 <li>“<a href="https://aworkinglibrary.com/writing/knowledge-workers">There aren't knowledge workers, only workers</a>” by <strong>Mandy Brown</strong></li>
 <li>“<a href="https://nonzero.substack.com/p/ode-to-a-world-saving-idea-f4b">Attribution error: explaining other's behavior with disposition or situation</a>” by <strong>Robert Wright</strong></li>
@@ -33,6 +35,8 @@ I use <a href="https://omnivore.app">Omnivore</a> to read, tag, and share URLs. 
 <li>“<a href="https://brettscott.substack.com/p/tech-doesnt-make-our-lives-easier">Tech doesn’t make our lives easier. It makes them faster</a>” by <strong>Brett Scott</strong></li>
 </ul>
 <h2>Retro Gaming</h2><ul>
+<li>“<a href="https://gamebanana.com/mods/544238">Super Mario 64 in Sonic Adventure DX</a>” by <strong>Sora</strong></li>
+<li>“<a href="https://www.youtube.com/watch?v=1-LWI2tGfhQ">FlippyDrive for the GameCube</a>” by <strong>Macho Nacho</strong></li>
 <li>“<a href="https://fabiensanglard.net/snes_video/index.html">Super Nintendo Video System</a>” by <strong>Fabien Sanglard</strong></li>
 <li>“<a href="https://youtu.be/nviIKTywuYU?si=mgFOhNBRMCTAIwOU">A video about Melee</a>” by <strong>AsumSaus</strong></li>
 <li>“<a href="https://youtube.com/watch?si=BDytOgheHFncVBK9&v=tfS9SYPT-jw">Super Paper Mario's design</a>” by <strong>Kirbyster</strong></li>
@@ -71,7 +75,7 @@ I use <a href="https://omnivore.app">Omnivore</a> to read, tag, and share URLs. 
 <li>“<a href="https://www.youtube.com/watch?v=EkcISHZvWHE">Ashida Portable GameCube Assembly</a>” by <strong>GingerOfVODs</strong></li>
 </ul>
 <h2>Security</h2><ul>
-<li>“<a href="https://blog.isosceles.com/openssh-backdoors/">Comparing the two OpenSSH backdoors</a>” by <strong>Ben Hawkes</strong></li>
+<li>“<a href="https://neilmadden.blog/2024/09/18/digital-signatures-and-how-to-avoid-them/">Digital signatures and how to avoid them</a>” by <strong>Neil Madden</strong></li>
 <li>“<a href="https://rya.nc/vpp-hack.html">Hacking a Virtual Power Plant</a>” by <strong>Ryan Castellucci</strong></li>
 <li>“<a href="https://www.anarsec.guide/posts/tamper/">Make Your Electronics Tamper-Evident</a>” by <strong>AnarSec</strong></li>
 <li>“<a href="https://harihareswara.net/posts/2024/a-story-about-jessica-by-swiftonsecurity/">A Story About Jessica</a>” by <strong>SwiftOnSecurity</strong></li>
@@ -87,6 +91,10 @@ I use <a href="https://omnivore.app">Omnivore</a> to read, tag, and share URLs. 
 <li>“<a href="https://blog.trailofbits.com/2023/05/23/trusted-publishing-a-new-benchmark-for-packaging-security">Trusted publishing: a new benchmark for packaging security</a>” by <strong>William Woodruff</strong></li>
 </ul>
 <h2>Software / OSS</h2><ul>
+<li>“<a href="https://blog.datadesk.eco/p/methane-mysteries">Solving methane mysteries with satellite imagery</a>” by <strong>Louis Goddard</strong></li>
+<li>“<a href="https://benn.substack.com/p/do-ai-companies-work">Do AI companies work?</a>” by <strong>Benn Stancil</strong></li>
+<li>“<a href="https://berjon.com/infrastructure-shock/">The Infrastructure Shock</a>” by <strong>Debbie Chachra</strong></li>
+<li>“<a href="https://www.w3.org/Provider/Style/URI">Cool URIs don't change</a>” by <strong>W3C</strong></li>
 <li>“<a href="https://infrequently.org/series/reckoning/">Reckoning for web frontend</a>” by <strong>Alex Russell</strong></li>
 <li>“<a href="https://infrequently.org/2024/01/performance-inequality-gap-2024/">Frontend is haunted by 2013's Great Branch Mispredict</a>” by <strong>Alex Russell</strong></li>
 <li>“<a href="https://holtwick.de/en/blog/localfirst-resilient-sync">Resilient Sync for Local First</a>” by <strong>Dirk Holtwick</strong></li>
@@ -125,6 +133,8 @@ I use <a href="https://omnivore.app">Omnivore</a> to read, tag, and share URLs. 
 <li>“<a href="https://tofu.quest">Is It Tofu? Check Unicode compatibility</a>” by <strong>Aaron Madlon-Kay</strong></li>
 </ul>
 <h2>Toy / Art</h2><ul>
+<li>“<a href="https://www.decarpentier.nl/carpentopod">Walking wooden coffee table</a>” by <strong>Giliam de Carpentier</strong></li>
+<li>“<a href="https://owickstrom.github.io/the-monospace-web/">The Monospace Web</a>” by <strong>Oskar Wickström</strong></li>
 <li>“<a href="https://www.candyjapan.com/behind-the-scenes/algorithmic-fitting-of-japanese-candy">Algorithmic fitting of Japanese candy</a>” by <strong>Candy Japan</strong></li>
 <li>“<a href="https://meatfighter.com/ascii-silhouettify/">ASCII Silhouettify</a>” by <strong>Meat Fighter</strong></li>
 <li>“<a href="https://www.terminal.shop">Order coffee from your terminal</a>”</li>
