--- a/app/templates/blog-posts.html
+++ b/app/templates/blog-posts.html
@@ -1,14 +1,33 @@
 {% extends "base.html" %}
+{% block title %}Blog archive{% endblock %}
 {% block header %}
-<h1>Articles</h1>
+<h1>Blog archive</h1>
 {% endblock %}
 {% block content %}
+
+<p>
+    <blockquote>
+    <p>
+        <strong><nobr>Get notified of new posts</nobr></strong> by subscribing to the <a href="{{ url_for('rss_blog_posts') }}">RSS feed</a> or the <a href="https://buttondown.email/sethmlarson">email newsletter</a>.
+        <nobr>Promise not to share your email</nobr> or send you spam, only whatever this is!
+    <form
+      action="https://buttondown.email/api/emails/embed-subscribe/sethmlarson"
+      method="post"
+      target="popupwindow"
+      onsubmit="window.open('https://buttondown.email/sethmlarson', 'popupwindow')"
+    >
+        <input type="email" name="email" id="bd-email" placeholder="Email address here" style="max-width: 100%; width: 16em; margin-bottom: 0.5em;" required/>
+        <input type="submit" value="Subscribe" style="max-width: 100%; width: 8em;"/>
+    </form>
+</blockquote>
+</p>
+
 <div class="row">
     <div class="col-12">
         {% for month in blog_posts %}
         {% for bp in blog_posts[month] %}
         {% if bp.slug not in hide_posts %}
-        <div style="margin-bottom: 0.5em;">{% if bp.slug in favorite_posts %}★ {% endif %}<a href="{{ url_for('get_blog_post', blog_post=bp.slug) }}">{{ bp.title }}</a> <span style="color: #999; font-size: 0.6em;"><nobr>{{ bp.date }}</nobr></span></div>
+        <div style="margin-bottom: 0.5em;">{% if bp.slug in favorite_posts %}<span title="This means this article is one of my favorites, nice choice!">★</span> {% endif %}<a href="{{ url_for('get_blog_post', blog_post=bp.slug) }}">{{ bp.title }}</a> <span style="color: #999; font-size: 0.6em;"><nobr>{{ bp.date }}</nobr></span></div>
         {% endif %}
         {% endfor %}
         {% endfor %}
