--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -17,13 +17,13 @@
 {% block header %}
 <h1>{{ blog_title }}</h1>
 <p><nobr>Published {{ blog_published_date }}</nobr> <nobr>by Seth Larson</nobr><br>
-Reading time: {{ reading_time }} minute{{ 's' if reading_time != 1 else '' }} <a href="https://webmention.io/api/mentions.html?target=https://sethmlarson.dev/{{ blog_slug }}"><span id="webmentions"></span></a></p>
+{% if blog_is_favorite %}<span title="This means this article is one of my favorites, nice choice!" style="color: #ff00ff">★</span> {% endif %} Reading time: {{ reading_time }} minute{{ 's' if reading_time != 1 else '' }} <a href="https://webmention.io/api/mentions.html?target=https://sethmlarson.dev/{{ blog_slug }}"><span id="webmentions"></span></a></p>
 {% endblock %}
 {% block content %}
 {{ blog_content | safe }}
 <blockquote>
     <p>
-        <strong>Have thoughts or questions?</strong> Let's chat with email or social:
+        <strong>Have thoughts or questions?</strong> Let's chat over email or social:
         <ul>
     <li><a href="mailto:sethmichaellarson@gmail.com"><code>sethmichaellarson@gmail.com</code></a></li>
     <li><a href="https://fosstodon.org/@sethmlarson"><code>@sethmlarson@fosstodon.org</code></a></li>
