--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -1,11 +1,15 @@
 {% extends "base.html" %}
+{% block title %}Cool URLs that I hope won't change{% endblock %}
 {% block header %}
-<h1>Links to cool stuff</h1>
+<h1><a href="https://www.w3.org/Provider/Style/URI">Cool URLs</a> that I hope won't change</h1>
 {% endblock %}
 {% block content %}
 <p>
-This is a list of links to stuff on the internet that I enjoyed and want to share with others.
-I use <a href="https://omnivore.app">Omnivore</a> to read, tag, and share URLs. I recommend giving them a try and <a href="https://opencollective.com/omnivore">supporting their team via Open Collective</a>.
+    This is a list of links to stuff on the internet that I enjoyed and want to share with others.
+    I use <a href="https://omnivore.app">Omnivore</a> to read, tag, and share URLs. I recommend giving them a try and <a href="https://opencollective.com/omnivore">supporting their team via Open Collective</a>.
+</p>
+<p>
+    There's not really a way to <em>subscribe</em> to this list, so you'll have to check back later for more!
 </p>
 <p>
 <h2>Life</h2><ul>
