--- a/app/templates/blog-posts.html
+++ b/app/templates/blog-posts.html
@@ -9,7 +9,7 @@
     <blockquote>
     <p>
         <strong><nobr>Get notified of new posts</nobr></strong> by subscribing to the <a href="{{ url_for('rss_blog_posts') }}">RSS feed</a> or the <a href="https://buttondown.email/sethmlarson">email newsletter</a>.
-        <nobr>Promise not to share your email</nobr> or send you spam, only whatever this is!
+        Promise not to share your email or send you spam, only whatever <em>this</em> is!
     <form
       action="https://buttondown.email/api/emails/embed-subscribe/sethmlarson"
       method="post"
