--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -13,7 +13,8 @@
 </p>
 <p>
 <h2>Life</h2><ul>
-<li>“<a href="https://restofworld.org/2024/electric-vehicle-conversions-uruguay/">Turning gas cars electric in Latin America</a>”</li>
+<li>“<a href="https://maggieappleton.com/garden">The Garden</a>” by <strong>Maggie Appleton</strong></li>
+<li>“<a href="https://restofworld.org/2024/electric-vehicle-conversions-uruguay/">Turning gas cars electric in Latin America</a>” by <strong>Daniela Dib</strong></li>
 <li>“<a href="https://www.joelonsoftware.com/2002/06/12/strategy-letter-v/">Commodotize your products' complement</a>” by <strong>Joel Spolsky</strong></li>
 <li>“<a href="https://climate.benjames.io/solar-off-grid/">Solar will be too cheap to connect to the power grid</a>” by <strong>Ben James</strong></li>
 <li>“<a href="https://yossarian.net/brothercon/">Brothercon 🍕</a>” by <strong>William Woodruff</strong></li>
@@ -95,6 +96,7 @@
 <li>“<a href="https://blog.trailofbits.com/2023/05/23/trusted-publishing-a-new-benchmark-for-packaging-security">Trusted publishing: a new benchmark for packaging security</a>” by <strong>William Woodruff</strong></li>
 </ul>
 <h2>Software / OSS</h2><ul>
+<li>“<a href="https://rknight.me/blog/setting-up-mastodon-author-tags/">Mastodon Author Tags</a>” by <strong>Robb Knight</strong></li>
 <li>“<a href="https://blog.datadesk.eco/p/methane-mysteries">Solving methane mysteries with satellite imagery</a>” by <strong>Louis Goddard</strong></li>
 <li>“<a href="https://benn.substack.com/p/do-ai-companies-work">Do AI companies work?</a>” by <strong>Benn Stancil</strong></li>
 <li>“<a href="https://berjon.com/infrastructure-shock/">The Infrastructure Shock</a>” by <strong>Debbie Chachra</strong></li>
