--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,13 +17,14 @@
     <link rel="webmention" href="https://webmention.io/sethmlarson.dev/webmention" />
     {{ html_head | safe }}
 {% block opengraph %}
-    <meta property="og:site_name" content="Seth Michael Larson"/>
+    <meta property="og:site_name" content="sethmlarson.dev"/>
     <meta property="og:author" content="Seth Michael Larson"/>
     <meta property="og:type" content="article"/>
     <meta property="og:description" content="Python, open source, and the internet"/>
     <meta property="og:image" content="https://github.com/sethmlarson.png"/>
+    <meta property="og:locale" content="en_US"/>
     <meta name="twitter:card" content="summary"/>
-    <meta name="twitter:site" content="@sethmlarson"/>
+    <meta name="twitter:site" content="sethmlarson.dev"/>
     <meta name="twitter:creator" content="@sethmlarson"/>
     <meta name="twitter:title" content="Seth Michael Larson"/>
     <meta name="twitter:description" content="Python, open source, and the internet"/>
