adding more links

--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -33,7 +33,7 @@
     <p>
         <strong>Want more articles like this one?</strong>
         <nobr>Get notified of new posts</nobr> by subscribing to the <a href="{{ url_for('rss_blog_posts') }}">RSS feed</a> or the <a href="https://buttondown.email/sethmlarson">email newsletter</a>.
-        Promise not to share your email or send you spam, only whatever <em>this</em> is!
+        I won't share your email or send spam, only whatever <em>this</em> is!
     <form
       action="https://buttondown.email/api/emails/embed-subscribe/sethmlarson"
       method="post"
@@ -45,7 +45,11 @@
     </form>
     </p>
     <p>
-        <strong>Find a typo?</strong> <a href="https://github.com/sethmlarson/sethmlarson.dev">This blog is open source</a>, pull requests are welcome.
+        <strong>Want more content now?</strong> This <a href="/blog">blog's archive</a> has {{ total_blog_count }} ready-to-read articles. I also curate
+        a <a href="/links">list of cool URLs</a> I find on the internet.
+    </p>
+    <p>
+        <strong>Find a typo?</strong> <a href="https://github.com/sethmlarson/sethmlarson.dev">This blog is open source</a>, pull requests are appreciated.
     </p>
     <p>
         <strong>Thanks for reading!</strong> ♡ This work is licensed under <nobr><a href="https://creativecommons.org/licenses/by-sa/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY-SA 4.0</a> <a href="https://creativecommons.org/licenses/by-sa/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/sa.svg?ref=chooser-v1"></a></nobr>
