Writing for the internet

--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -6,9 +6,6 @@
 {% block content %}
 <p>
     This is a list of links to stuff on the internet that I enjoyed and want to share with others.
-    I use <a href="https://omnivore.app">Omnivore</a> to read, tag, and share URLs. I recommend giving them a try and <a href="https://opencollective.com/omnivore">supporting their team via Open Collective</a>.
-</p>
-<p>
     There's not really a way to <em>subscribe</em> to this list, so you'll have to check back later for more!
 </p>
 <p>
@@ -96,6 +93,10 @@
 <li>“<a href="https://blog.trailofbits.com/2023/05/23/trusted-publishing-a-new-benchmark-for-packaging-security">Trusted publishing: a new benchmark for packaging security</a>” by <strong>William Woodruff</strong></li>
 </ul>
 <h2>Software / OSS</h2><ul>
+<li>“<a href="https://blog.glyph.im/2024/11/the-federation-deathmatch.html">Federation Deathmatch</a>” by <strong>Glyph</strong></li>
+<li>“<a href="https://blog.jim-nielsen.com/2024/enabled-by-default/">Enabled by default</a>” by <strong>Jim Nielsen</strong></li>
+<li>“<a href="https://www.smolways.com/post/where-the-digital-sidewalk-ends">Where the digital sidewalk ends</a>” by <strong>Huston Bokinsky</strong></li>
+<li>“<a href="https://dri.es/my-solar-powered-and-self-hosted-website">Solar-powered self-hosted website</a>” by <strong>Dries Buytaert</strong></li>
 <li>“<a href="https://rknight.me/blog/setting-up-mastodon-author-tags/">Mastodon Author Tags</a>” by <strong>Robb Knight</strong></li>
 <li>“<a href="https://blog.datadesk.eco/p/methane-mysteries">Solving methane mysteries with satellite imagery</a>” by <strong>Louis Goddard</strong></li>
 <li>“<a href="https://benn.substack.com/p/do-ai-companies-work">Do AI companies work?</a>” by <strong>Benn Stancil</strong></li>
