Remove list from blog footer

--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -25,10 +25,10 @@
 <blockquote>
     <p>
         <strong>Have thoughts or questions?</strong> Let's chat over email or social:
-        <ul>
-    <li><a href="mailto:sethmichaellarson@gmail.com"><code>sethmichaellarson@gmail.com</code></a></li>
-    <li><a href="https://fosstodon.org/@sethmlarson"><code>@sethmlarson@fosstodon.org</code></a></li>
-        </ul>
+    </p>
+    <p>
+        <a href="mailto:sethmichaellarson@gmail.com"><code>sethmichaellarson@gmail.com</code></a><br>
+        <a href="https://fosstodon.org/@sethmlarson"><code>@sethmlarson@fosstodon.org</code></a>
     </p>
     <p>
         <strong>Want more articles like this one?</strong>
