Part-way towards migrating to local feeds/articles

--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -9,6 +9,13 @@
     There's not really a way to <em>subscribe</em> to this list, so you'll have to check back later for more!
 </p>
 <p>
+    I share all the
+    <a href="https://raw.githubusercontent.com/sethmlarson/sethmlarson.dev/refs/heads/master/archive/feeds.opml">RSS feeds</a>
+    I follow and <a href="https://raw.githubusercontent.com/sethmlarson/sethmlarson.dev/refs/heads/master/archive/articles.opml">article URLs</a>
+    below using <a href="https://en.wikipedia.org/wiki/OPML">OPML</a>, an open standard for sharing groups of links with text and other metadata.
+    You can import the feeds directly into your reader app of choice (but beware, it's a firehose!)
+</p>
+<p id="#sentinel">
 <h2>Life</h2><ul>
 <li>“<a href="https://maggieappleton.com/garden">The Garden</a>” by <strong>Maggie Appleton</strong></li>
 <li>“<a href="https://restofworld.org/2024/electric-vehicle-conversions-uruguay/">Turning gas cars electric in Latin America</a>” by <strong>Daniela Dib</strong></li>
