Also pull from Inoreader starred articles

--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -22,6 +22,7 @@
 <li>“<a href="https://www.youtube.com/watch?v=1n9Gqa-0Cp0">Tim Walz plays Crazy Taxi with Alexandria Ocasio-Cortez</a>”</li>
 <li>“<a href="https://www.forrestwozniak.com">Sign Painter</a>” by <strong>Forrest Wozniak</strong></li>
 <li>“<a href="https://racketmn.com/its-time-for-twin-cities-mn-chefs-to-embrace-spam-hormel">It’s Time for Twin Cities Chefs to Embrace Spam</a>” by <strong>Em Cassel</strong></li>
+<li>“<a href="https://www.joanwestenberg.com/is-cultural-technical-debt-sabotaging-our-survival">Cultural tech debt</a>” by <strong>Joan Westenberg</strong></li>
 <li>“<a href="https://maggieappleton.com/garden">The Garden</a>” by <strong>Maggie Appleton</strong></li>
 <li>“<a href="https://restofworld.org/2024/electric-vehicle-conversions-uruguay">Turning gas cars electric in Latin America</a>” by <strong>Daniela Dib</strong></li>
 <li>“<a href="https://www.joelonsoftware.com/2002/06/12/strategy-letter-v">Commodotize your products' complement</a>” by <strong>Joel Spolsky</strong></li>
@@ -49,6 +50,7 @@
 </ul>
 <h2>Retro Gaming</h2>
 <ul>
+<li>“<a href="https://cuyler36.github.io/2017/10/31/creating-a-custom-name-routine.html">Implementing a Custom Item Name Routine</a>” by <strong>Cuyler</strong></li>
 <li>“<a href="https://nookipedia.com/wiki/Secret_code/Generator">Nook Code Generator for Animal Crossing GC</a>” by <strong>Cuyler</strong></li>
 <li>“<a href="https://www.reddit.com/r/Gamecube/comments/1gqfbae/my_niece_turned_18_and_i_gave_her_an_animal/?share_id=_XF34GcRZ_h-J5UqZDfZj&utm_content=1&utm_medium=ios_app&utm_name=iossmf&utm_source=share&utm_term=22&rdt=34253">Sharing items in Animal Crossing GC: "It's still online???"</a>”</li>
 <li>“<a href="https://www.kongabeat.com">Konga Beat: Track editor for Donkey Konga 2 and 3</a>” by <strong>Parham Gholami and Dexter Friedman</strong></li>
@@ -180,7 +182,6 @@
 <li>“<a href="https://shot-scraper.datasette.io/en/stable">CLI for capturing pictures and PDFs of websites</a>” by <strong>Simon Willison</strong></li>
 <li>“<a href="https://mcbroken.com">McBroken: is the McDonalds ice cream machine broken?</a>” by <strong>Rashiq</strong></li>
 <li>“<a href="https://www.youtube.com/watch?v=QPFWzSlg-78">Pikmin 2 Procedural Cave Music</a>” by <strong>Scruffy</strong></li>
-<li>“<a href="https://theanglebracket.com">The Angle Bracket</a>”</li>
 <li>“<a href="https://dukope.com/devlogs/papers-please/lcdplease">Making "LCD, Please"</a>” by <strong>Lucas Pope</strong></li>
 <li>“<a href="https://abagames.github.io/joys-of-small-game-development-en">Joys of Small Game Development</a>” by <strong>abagames</strong></li>
 <li>“<a href="https://alex.miller.garden/grid-world">GRID WORLD</a>” by <strong>Alexander Miller</strong></li>
