SEGA Genesis and Mega Drive games and ROMs from Steam

--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -18,6 +18,8 @@
 <p id="#sentinel">
 <h2>Life</h2>
 <ul>
+<li>“<a href="https://kjaymiller.com/blog/how-long-should-we-be-in-charge.html">How long should we be in charge?</a>” by <strong>Jay Miller</strong></li>
+<li>“<a href="https://medium.com/@dakara.liberty/boredom-sharpens-the-mind-752d4b44d05d">Boredom sharpens the mind</a>” by <strong>Dakara</strong></li>
 <li>“<a href="https://www.youtube.com/@CannedFishFiles">Canned Fish Files</a>” by <strong>Matthew Carlson</strong></li>
 <li>“<a href="https://www.youtube.com/watch?v=1n9Gqa-0Cp0">Tim Walz plays Crazy Taxi with Alexandria Ocasio-Cortez</a>”</li>
 <li>“<a href="https://www.forrestwozniak.com">Sign Painter</a>” by <strong>Forrest Wozniak</strong></li>
@@ -50,7 +52,7 @@
 </ul>
 <h2>Retro Gaming</h2>
 <ul>
-<li>“<a href="https://cuyler36.github.io/2017/10/31/creating-a-custom-name-routine.html">Implementing a Custom Item Name Routine</a>” by <strong>Cuyler</strong></li>
+<li>“<a href="https://cuyler36.github.io/2017/10/31/creating-a-custom-name-routine.html">Custom item name routine while translating Dōbutsu no Mori e+</a>” by <strong>Cuyler</strong></li>
 <li>“<a href="https://nookipedia.com/wiki/Secret_code/Generator">Nook Code Generator for Animal Crossing GC</a>” by <strong>Cuyler</strong></li>
 <li>“<a href="https://www.reddit.com/r/Gamecube/comments/1gqfbae/my_niece_turned_18_and_i_gave_her_an_animal/?share_id=_XF34GcRZ_h-J5UqZDfZj&utm_content=1&utm_medium=ios_app&utm_name=iossmf&utm_source=share&utm_term=22&rdt=34253">Sharing items in Animal Crossing GC: "It's still online???"</a>”</li>
 <li>“<a href="https://www.kongabeat.com">Konga Beat: Track editor for Donkey Konga 2 and 3</a>” by <strong>Parham Gholami and Dexter Friedman</strong></li>
@@ -100,6 +102,7 @@
 </ul>
 <h2>Security</h2>
 <ul>
+<li>“<a href="https://blog.yossarian.net/2024/11/18/Security-means-securing-people-where-they-are">Security means securing people where they are</a>” by <strong>William Woodruff</strong></li>
 <li>“<a href="https://neilmadden.blog/2024/09/18/digital-signatures-and-how-to-avoid-them">Digital signatures and how to avoid them</a>” by <strong>Neil Madden</strong></li>
 <li>“<a href="https://rya.nc/vpp-hack.html">Hacking a Virtual Power Plant</a>” by <strong>Ryan Castellucci</strong></li>
 <li>“<a href="https://www.anarsec.guide/posts/tamper">Make Your Electronics Tamper-Evident</a>” by <strong>AnarSec</strong></li>
@@ -117,6 +120,7 @@
 </ul>
 <h2>Software and OSS</h2>
 <ul>
+<li>“<a href="https://viewsource.info">View source web</a>” by <strong>Garry Ing</strong></li>
 <li>“<a href="https://www.abortretry.fail/p/the-internet-gopher-from-minnesota">The Internet Gopher from Minnesota</a>”</li>
 <li>“<a href="https://lagrangepoint.substack.com/p/airpods-hearing-aid-hacking">Bypassing AirPods regulatory locks with Faraday cages</a>” by <strong>Lagrange Point</strong></li>
 <li>“<a href="https://blog.glyph.im/2024/11/the-federation-deathmatch.html">Federation Deathmatch</a>” by <strong>Glyph</strong></li>
