--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -18,6 +18,7 @@
 <p id="#sentinel">
 <h2>Life</h2>
 <ul>
+<li>“<a href="https://www.youtube.com/watch?v=0FwM8HdOY-A">Fix the fucking networks</a>”</li>
 <li>“<a href="https://kjaymiller.com/blog/how-long-should-we-be-in-charge.html">How long should we be in charge?</a>” by <strong>Jay Miller</strong></li>
 <li>“<a href="https://medium.com/@dakara.liberty/boredom-sharpens-the-mind-752d4b44d05d">Boredom sharpens the mind</a>” by <strong>Dakara</strong></li>
 <li>“<a href="https://www.youtube.com/@CannedFishFiles">Canned Fish Files</a>” by <strong>Matthew Carlson</strong></li>
@@ -52,6 +53,8 @@
 </ul>
 <h2>Retro Gaming</h2>
 <ul>
+<li>“<a href="https://www.youtube.com/watch?v=V1d8XWf8dDk">Custom villagers in Animal Crossing e+</a>” by <strong>Hunter R.</strong></li>
+<li>“<a href="https://hunter-r.com/posts/dnm-ereader-doc">Villager E-Reader card format for Dōbutsu no Mori e+</a>” by <strong>Hunter R.</strong></li>
 <li>“<a href="https://cuyler36.github.io/2017/10/31/creating-a-custom-name-routine.html">Custom item name routine while translating Dōbutsu no Mori e+</a>” by <strong>Cuyler</strong></li>
 <li>“<a href="https://nookipedia.com/wiki/Secret_code/Generator">Nook Code Generator for Animal Crossing GC</a>” by <strong>Cuyler</strong></li>
 <li>“<a href="https://www.reddit.com/r/Gamecube/comments/1gqfbae/my_niece_turned_18_and_i_gave_her_an_animal/?share_id=_XF34GcRZ_h-J5UqZDfZj&utm_content=1&utm_medium=ios_app&utm_name=iossmf&utm_source=share&utm_term=22&rdt=34253">Sharing items in Animal Crossing GC: "It's still online???"</a>”</li>
